# velo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  conanfile.py
apps/: CMakeLists.txt
apps/Beam/: CMakeLists.txt  main.cpp
bindings/: CMakeLists.txt
bindings/PyVelo/: CMakeLists.txt  PyVelo.cpp
conan/profiles/: x86_64-clang-17
examples/Beam/: Beam.py  beam.msh
presets/: common.json  dev.json
src/: CMakeLists.txt
src/Velo/: CMakeLists.txt
src/Velo/Core/: CMakeLists.txt  Scene.h  Space.h  Types.h
src/Velo/Physics/: CMakeLists.txt  Energy.h  MechanicalState.h  StVK.cpp  StVK.h  StableNeoHookean.cpp  StableNeoHookean.h  State.h  xpbd.cpp  xpbd.h
